--- a/src/content/structured/get-started/figma.mdx
+++ b/src/content/structured/get-started/figma.mdx
@@ -1,15 +1,15 @@
 ---
-path: "/get-started/figma"
+path: "/get-started/design/figma"
 
-navPriority: 5
+navPriority: 1
 
-date: "2024-02-06"
+date: "2024-11-14"
 
 title: "Figma UI Kit"
 
 subTitle: "Reusable and flexible Figma components used to design, prototype and hand-off designs for apps and digital products."
 
-contribute: "https://github.com/mi6/ic-design-system/tree/main/src/content/structured/get-started/figma.mdx"
+contribute: "https://github.com/mi6/ic-design-system/tree/main/src/content/structured/get-started/design/figma.mdx"
 ---
 
 import figmaFig1 from "./images/assets2x.png";
