--- a/src/content/structured/get-started/releases-versioning.mdx
+++ b/src/content/structured/get-started/releases-versioning.mdx
@@ -1,13 +1,15 @@
 ---
 path: "/get-started/releases-versions"
 
+navPriority: 3
+
 date: "2024-11-28"
 
 title: "Releases and versions"
 
 subTitle: "Our approach to releases and versioning."
 
-contribute: "https://github.com/mi6/ic-design-system/tree/main/src/content/structured/get-started/releases-versioning.mdx"
+contribute: "https://github.com/mi6/ic-design-system/tree/main/src/content/structured/get-started/development/releases-versioning.mdx"
 ---
 
 ## How we release and version
