--- a/src/content/structured/get-started/test-components.mdx
+++ b/src/content/structured/get-started/test-components.mdx
@@ -1,11 +1,11 @@
 ---
-path: "/get-started/test-components"
+path: "/get-started/development/test-components"
 
-navPriority: 2
+navPriority: 3
 
 date: "2024-06-25"
 
-title: "Testing the components"
+title: "Testing components"
 
 subTitle: "Test the UI Kit components within the shadow DOM using a testing framework."
 
