docs(root): updating accessibility statement guidance
Updating guidance for accessibility statements to include more specific guidance for examples, also
updating the html and document versions for references to wcag 2.1

--- a/src/content/structured/accessibility/documenting/accessibility-statements-guidance.mdx
+++ b/src/content/structured/accessibility/documenting/accessibility-statements-guidance.mdx
@@ -54,11 +54,17 @@ It has examples and sample wording and guidance. Remove anything marked as 'EXAM
 
 ## 1. Overview
 
-This section is used to highlight how accessible the app is. The sample bullet points aren't a checklist but will be true when the app is compliant to EN 301 549 or the Web Content Accessibility Guidelines (WCAG) Level A and AA criteria.
+This section is used to highlight how accessible the app is. The bullet points are one example of what you could write and aren't a checklist but will be true when the app is fully compliant to EN 301 549 or the Web Content Accessibility Guidelines (WCAG) Level A and AA criteria.
+
+<IcAlert
+  message="Please update the example bullet points to match your app. If you leave the current examples, the information might be incorrect.
+"
+  variant="info"
+/>
 
 If the app doesn't have user guides, remove that statement.
 
-Keep this section up to date if part or most of the app doesn't comply and the statements in the bullet points aren't true.
+Keep this section up to date as you make changes to your app.
 
 If the app is fully or partly made up of third-party software, note this here. Reference the conformance level that the vendor provides. If the vendor doesn't provide accessibility documentation, request it from them.
 
@@ -117,9 +123,9 @@ The form of words here are legally required, so **don't change it** except for a
 
 There's a legally required way of expressing the compliance status of your app, so don't change any words. Delete the statements that don't apply.
 
-- If the app meets **all** Level A and Level AA success criteria of WCAG Level 2.1 then it's 'fully compliant'.
-- If the app meets **more than half** of the Level A and Level AA success criteria of WCAG Level 2.1 then it's 'partially compliant'.
-- If the app meets **less than half** of the Level A and Level AA success criteria of WCAG Level 2.1 then it's 'not compliant'.
+- If the app meets **all** Level A and Level AA success criteria of WCAG Level 2.2 then it's 'fully compliant'.
+- If the app meets **more than half** of the Level A and Level AA success criteria of WCAG Level 2.2 then it's 'partially compliant'.
+- If the app meets **less than half** of the Level A and Level AA success criteria of WCAG Level 2.2 then it's 'not compliant'.
 
 If your app, service or product needs to meet the EN 301 549 standard, then use the above thresholds and insert the following sentence:
 _“This [product/website/app/service] is [fully/partially/not] compliant to the EN 301 549 standards.”_
